fix: scrollbar边框颜色修改

--- a/components/vc-scrollbar/style/index.less
+++ b/components/vc-scrollbar/style/index.less
@@ -64,8 +64,8 @@
 
     &.@{scrollbar-prefix-cls}-rail--horizontalBg {
       background: #FAFAFA; 
-      border-top: 1px solid #DCDCDC;
-      border-bottom: 1px solid #DCDCDC;
+      border-top: 1px solid @border-color-base;
+      border-bottom: 1px solid @border-color-base;
     }
 
     &.@{scrollbar-prefix-cls}-rail--vertical {
@@ -96,8 +96,8 @@
 
     &.@{scrollbar-prefix-cls}-rail--verticalBg {
       background: #FAFAFA; 
-      border-left: 1px solid #DCDCDC;
-      border-right: 1px solid #DCDCDC;
+      border-left: 1px solid @border-color-base;
+      border-right: 1px solid @border-color-base;
     }
 
     &.@{scrollbar-prefix-cls}-rail--disabled {
